--- a/tests/test.yml
+++ b/tests/test.yml
@@ -2,5 +2,5 @@
 - hosts: localhost
   remote_user: root
   become: true
-  tasks:
-    - {tasks: ../tasks/secure-elk}
+  roles:
+    - {roles: ../roles/secure-elk}
