--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,5 @@
 ---
-- hosts: localhost
-###- hosts: elkservers
+- name: Secure ELK host group SongketMail
 
 # https://ryaneschinger.com/blog/securing-a-server-with-ansible/
 # lynis https://github.com/tommarshall/ansible-role-lynis
@@ -85,7 +84,3 @@
         user: root
         job: lynis audit system --auditor "automated" --cronjob > {{ lynis_log_directory }}/report-$(hostname).$(date +%Y%m%d).txt && mv /var/log/lynis.log {{ lynis_log_directory }}/report-log-$(hostname).$(date +%Y%m%d).log && mv /var/log/lynis-report.dat {{ lynis_log_directory }}/report-data-$(hostname).$(date +%Y%m%d).txt >/dev/null 2>&1
       become: yes
-
-  handlers:
-    - name: Restart ssh
-      service: name=ssh state=restarted
